change permissions string to enum
